[package]
name = "hacknews"
version = "0.1.0"
authors = ["buhe <hare.bu@herewhite.com>"]
edition = "2018"
description = "hack news"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.16"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
clap = "3.0.0-beta.4"
[dev-dependencies]
tokio-test = "1.11.0"